Move admin theming from custom module to admin theme

--- a/web/themes/crane/scss/base/_01-colors.scss
+++ b/web/themes/crane/scss/base/_01-colors.scss
@@ -3,6 +3,7 @@
 ========================== */
 $white        : #ffffff;
 $offWhite     : #f6f6f6;
+$whiteBlue    : #dbe4e4;
 $lightGrey    : #ededed;
 $grey         : #cccccc;
 $contrastGrey : #767676;
@@ -24,6 +25,7 @@ $darkBlue     : #323b49;
 
 $transBlueLight: rgba(28,88,131,0.25);
 $transBlack    : rgba(35,35,35,0.7);
+$transWhite    : rgba(255,255,255,0.8);
 
 /* COMPONENT COLORS
 ----------------- */
