--- a/web/themes/crane/scss/base/_global.scss
+++ b/web/themes/crane/scss/base/_global.scss
@@ -1,3 +1,11 @@
 /* ========================
   GLOBAL
 ========================== */
+
+/* LAYOUT CONTAINER
+--------------------- */
+.dialog-off-canvas-main-canvas{
+	& > .layout-container{
+		padding-top: $spaceSm;
+	}
+}
