--- a/web/themes/crane/scss/components/_containers.scss
+++ b/web/themes/crane/scss/components/_containers.scss
@@ -1,3 +1,28 @@
 /* ==============
 	 CONTAINERS
 ================== */
+.container-inline{
+	input[value="Add new media"],input[value="Add existing media"]{
+		margin-top: 1em;
+		margin-bottom: 1em;
+	}
+}
+.ief-form-bottom .fieldset-wrapper > div{
+	input[value="Select Image"],input[value="Select File"],input[value="Select Video"]{
+		margin: 1em 0;
+	}
+	.ief-entity-submit[value="Add media"]{
+		display: none;
+	}
+	input[value="Cancel"]{
+		margin-left: 0;
+	}
+}
+
+/* MODALS
+------------- */
+#drupal-modal{
+	.captcha-admin-links{
+		display: none;
+	}
+}
