--- a/web/themes/citizen_patterns/components/_patterns/00-base/colors/_component-color-vars.scss
+++ b/web/themes/citizen_patterns/components/_patterns/00-base/colors/_component-color-vars.scss
@@ -52,8 +52,8 @@ $modalHeaderBack           : $darkGrey;
 $modalHeaderClose          : $white;
 $modalHeaderCloseHover     : $grey;
 $modalGalButton            : $white;
-$modalGalButtonHover       : $white;
-$modalGalButtonBackHover   : rgba(255,255,255,0.15);
+$modalGalButtonHover       : $link;
+$modalGalButtonBackHover   : transparent;
 $modalGalButtonShadow      : $transBlack;
 $modalGalButtonShadowHover : $transBlack;
 $hamburger                 : $black;
