--- a/web/themes/crane/templates/paragraphs/paragraph--accordion-group--preview.html.twig
+++ b/web/themes/crane/templates/paragraphs/paragraph--accordion-group--preview.html.twig
@@ -44,10 +44,15 @@
   <div class="field field--name-field-accordion-item field--type-string field--label-inline field__items">
     <div class="field__label">Accordions</div>
     {%- for key, accordion in content.field_accordion_item['#items'] if key|first != "#" -%}
-      {% if loop.index0 > 0 %},{% endif %}
-      <div class="field__item">
-        {{ accordion.entity.field_accordion_header.0.value }}
-      </div>
+    	{% if loop.index0 < 2 %}
+	      {% if loop.index0 > 0 %},{% endif %}
+	      <div class="field__item">
+	        {{ accordion.entity.field_accordion_header.0.value }}
+	      </div>
+	    {% endif %}
+	    {% if loop.index0 >= 2 %}
+	    	<span class="more">...</span>
+	    {% endif %}
     {%- endfor -%}
   </div>
 {% endblock %}
