--- a/web/themes/crane/css/crane.css
+++ b/web/themes/crane/css/crane.css
@@ -4889,6 +4889,9 @@ header.content-header {
     #toolbar-bar.live.toolbar-tab .toolbar-item {
       color: #ffffff !important; }
 
+#responsive-preview-toolbar-tab {
+  display: none !important; }
+
 .toolbar-tray-horizontal .menu-item-expanded {
   background-color: #ffffff !important; }
 
@@ -4935,6 +4938,10 @@ header.content-header {
 /* ========================
   NODE FORMS
 ========================== */
+@media (min-width: 760px) {
+  .node-form {
+    padding-right: 32px; } }
+
 /* ========================
   PARAGRAPHS
 ========================== */
